--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -2,7 +2,7 @@ is_package: true
 container:
   type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"JKBNWB":74}',
+    wrap_on: never, col_spacing: medium, spacing_above: small, col_widths: '{"JKBNWB":74}',
     spacing_below: small, background: ''}
 components:
 - type: GridPanel
@@ -18,14 +18,6 @@ components:
     layout_properties: {grid_position: 'HWESZE,NBATXT', row: BTNFSF, width_xs: 4,
       col_xs: 0}
     name: image_1
-  - type: Label
-    properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
-      visible: true, text: Escalation Dashboard, font_size: 28, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
-      underline: false, icon: ''}
-    layout_properties: {grid_position: 'HWESZE,ZWTDKT', row: BTNFSF, width_xs: 4,
-      col_xs: 3, width: 303.328}
-    name: label_1
   - type: Image
     properties: {role: null, vertical_align: center, height: 44, tooltip: '', border: '',
       foreground: '', visible: true, display_mode: shrink_to_fit, spacing_above: small,
@@ -488,3 +480,4 @@ components:
         background: ''}
       layout_properties: {}
       name: repeating_panel_1
+custom_component: true
