--- a/client_code/Mainpage/Modal_wide/form_template.yaml
+++ b/client_code/Mainpage/Modal_wide/form_template.yaml
@@ -248,3 +248,6 @@ components:
         name: action_panelwide
         layout_properties: {}
 is_package: true
+custom_component: true
+properties:
+- {name: prop, type: string, default_value: '', default_binding_prop: true}
