--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -6,7 +6,8 @@ container:
     spacing_below: small, background: ''}
 components:
 - type: GridPanel
-  properties: {}
+  properties: {spacing_above: small, spacing_below: small, background: '', foreground: '',
+    border: '', visible: false, role: null, tooltip: ''}
   layout_properties: {grid_position: 'BJNURA,FQSNJK'}
   name: grid_panel_3
   components:
