--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -450,10 +450,10 @@ components:
         width: '160'}
       - {id: DCIFYE, title: Assigned To, data_key: assigned_to, $$hashKey: 'object:33580',
         width: '120', expand: false}
-      - {id: YBLVEX, title: Job Report, data_key: job_report, $$hashKey: 'object:405',
-        width: '80'}
-      - {id: FUNZSD, title: Comment History, data_key: comment_history, $$hashKey: 'object:18690',
-        width: '120'}
+      - {id: YBLVEX, title: '', data_key: job_report, $$hashKey: 'object:405', width: '40'}
+      - {id: FUNZSD, title: '', data_key: comment_history, $$hashKey: 'object:18690',
+        width: '40'}
+      - {id: LDAFAU, title: '', data_key: watch_list, $$hashKey: 'object:132614'}
       auto_header: true
       tooltip: ''
       border: ''
@@ -465,7 +465,7 @@ components:
       spacing_above: small
       spacing_below: small
       background: ''
-    layout_properties: {width: 976, row: BEEIKG, width_xs: 12, col_xs: 0}
+    layout_properties: {width: 603.333, row: BEEIKG, width_xs: 12, col_xs: 0}
     name: data_grid_1
     components:
     - type: RepeatingPanel
