Edited ServerModule1 and Mainpage.Mainpage.RowTemplate1

--- a/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
@@ -79,4 +79,5 @@ components:
   name: watch
   layout_properties: {column: LDAFAU}
   data_bindings:
-  - {property: checked, code: 'self.item[''watch_list'']', writeback: true}
+  - {property: checked, code: 'self.item[''watch_list'']', writeback: false}
+  event_bindings: {change: update_item}
