Created Star filled.png and Star 1.png; Edited Mainpage.Modal_wide, theme.css, theme/parameters.yaml and Mainpage.Mainpage.RowTemplate1

--- a/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
@@ -6,7 +6,7 @@ container:
     italic: false, background: '', bold: false, underline: false}
 components:
 - type: Link
-  properties: {col_widths: '{}'}
+  properties: {col_widths: '{"OYYRAS":30}'}
   name: link_1
   layout_properties: {column: YBLVEX}
   event_bindings: {click: jobreport_click}
