--- a/client_code/Mainpage/Modal_wide/form_template.yaml
+++ b/client_code/Mainpage/Modal_wide/form_template.yaml
@@ -115,7 +115,7 @@ components:
     layout_properties: {grid_position: 'KTJXJG,YWNEHA'}
   - type: ColumnPanel
     properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: true,
-      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"RDQOEF":40,"SSSIQM":20}',
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"RDQOEF":40,"SSSIQM":40,"SKSZCL":10}',
       spacing_below: small, background: ''}
     name: column_panel_2
     layout_properties: {grid_position: 'PCBSQW,FKYJQQ'}
@@ -198,6 +198,24 @@ components:
       layout_properties: {grid_position: 'SGYDHC,SSSIQM YMXSCI,KHYYGI NJXDUE,VNJRDH',
         full_width_row: false}
       event_bindings: {click: clear_button_click}
+    - type: Link
+      properties: {role: null, url: '', align: left, tooltip: Add to watchlist, border: '',
+        foreground: '', visible: true, text: '', font_size: null, wrap_on: mobile,
+        font: '', col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '{}',
+        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
+      name: link_1
+      layout_properties: {grid_position: 'SGYDHC,SKSZCL'}
+      components:
+      - type: Image
+        properties: {role: null, vertical_align: center, height: 14, tooltip: '',
+          border: '', foreground: '', visible: true, display_mode: shrink_to_fit,
+          spacing_above: small, source: '', spacing_below: small, background: '',
+          horizontal_align: center}
+        name: favourite
+        layout_properties: {grid_position: 'PHZSYP,SHTQCO'}
+        data_bindings: []
+      event_bindings: {click: update_item}
   - type: Label
     properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
       visible: true, text: Comment History, font_size: 14, font: '', spacing_above: small,
