--- a/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
@@ -73,7 +73,7 @@ components:
   - {property: source, code: 'self.item[''latest_status''][''icon'']'}
 - type: CheckBox
   properties: {role: null, align: left, tooltip: Add to watchlist, border: '', enabled: true,
-    foreground: '', allow_indeterminate: false, visible: true, text: '', font_size: 1,
+    foreground: '', allow_indeterminate: false, visible: false, text: '', font_size: 1,
     font: '', spacing_above: none, spacing_below: none, italic: false, background: '',
     bold: false, checked: false, underline: false}
   name: watch
@@ -81,3 +81,21 @@ components:
   data_bindings:
   - {property: checked, code: 'self.item[''watch_list'']', writeback: false}
   event_bindings: {change: update_item}
+- type: Link
+  properties: {role: null, url: '', align: left, tooltip: Add to watchlist, border: '',
+    foreground: '', visible: true, text: '', font_size: null, wrap_on: mobile, font: '',
+    col_spacing: medium, spacing_above: small, icon_align: left, col_widths: '{}',
+    spacing_below: small, italic: false, background: '', bold: false, underline: false,
+    icon: ''}
+  name: link_1_copy
+  layout_properties: {grid_position: 'SGYDHC,SKSZCL', row: JKJKTK, width_xs: 1, col_xs: 10,
+    column: LDAFAU}
+  components:
+  - type: Image
+    properties: {role: null, vertical_align: center, height: 14, tooltip: '', border: '',
+      foreground: '', visible: true, display_mode: shrink_to_fit, spacing_above: small,
+      source: '', spacing_below: small, background: '', horizontal_align: center}
+    name: favourite
+    layout_properties: {grid_position: 'PHZSYP,SHTQCO'}
+    data_bindings: []
+  event_bindings: {click: update_item2}
