Edited Homepage, settings and Mainpage.Mainpage.RowTemplate1

--- a/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
@@ -49,7 +49,8 @@ components:
   name: label_5
   layout_properties: {column: DCIFYE}
   data_bindings:
-  - {property: text, code: 'self.item[''latest_assignee''][''name'']'}
+  - {property: text, code: 'self.item[''latest_assignee''][''name''] if self.item[''latest_assignee'']
+      else ''---'''}
 - type: Link
   properties: {col_widths: '{}'}
   name: link_2
