--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -427,7 +427,7 @@ components:
   components:
   - type: ColumnPanel
     properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-      wrap_on: mobile, col_spacing: medium, spacing_above: none, col_widths: '{"IFEVYM":35,"VYNMKS":15}',
+      wrap_on: mobile, col_spacing: medium, spacing_above: none, col_widths: '{"IFEVYM":40,"VYNMKS":15,"GSLOXW":15}',
       spacing_below: none, background: ''}
     name: column_panel_1
     layout_properties: {width: null, expand: true}
@@ -440,7 +440,7 @@ components:
       layout_properties: {grid_position: 'MPINBT,GSLOXW', full_width_row: false}
       components:
       - type: Image
-        properties: {role: null, vertical_align: center, height: 45, tooltip: '',
+        properties: {role: null, vertical_align: center, height: 43, tooltip: '',
           border: '', foreground: '', visible: true, display_mode: shrink_to_fit,
           spacing_above: small, source: _/theme/RadaroLogo_BlackHigh.png, spacing_below: small,
           background: '', horizontal_align: left}
@@ -453,7 +453,7 @@ components:
         name: image_1
     - type: Label
       properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
-        visible: true, text: Escalation Dashboard, font_size: 28, font: '', spacing_above: small,
+        visible: true, text: Escalation Dashboard, font_size: 32, font: '', spacing_above: small,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
         underline: false, icon: ''}
       layout_properties: {grid_position: 'MPINBT,IFEVYM', row: BTNFSF, width_xs: 4,
