--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -440,7 +440,7 @@ components:
       layout_properties: {grid_position: 'MPINBT,GSLOXW', full_width_row: false}
       components:
       - type: Image
-        properties: {role: null, vertical_align: center, height: 43, tooltip: '',
+        properties: {role: null, vertical_align: center, height: '44', tooltip: '',
           border: '', foreground: '', visible: true, display_mode: shrink_to_fit,
           spacing_above: small, source: _/theme/RadaroLogo_BlackHigh.png, spacing_below: small,
           background: '', horizontal_align: left}
@@ -452,7 +452,7 @@ components:
           full_width_row: false
         name: image_1
     - type: Label
-      properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+      properties: {role: headline, align: center, tooltip: '', border: '', foreground: '',
         visible: true, text: Escalation Dashboard, font_size: 32, font: '', spacing_above: small,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
         underline: false, icon: ''}
