--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -418,7 +418,7 @@ components:
   - type: form:Mainpage.Mainpage
     properties: {}
     name: mainpage_1
-    layout_properties: {grid_position: 'XLOVEZ,HLDREB', full_width_row: true}
+    layout_properties: {grid_position: 'FJRGJM,VMGVVQ', full_width_row: true}
 - type: FlowPanel
   properties: {role: null, spacing: huge, align: center, tooltip: '', border: '',
     foreground: '', visible: true, spacing_above: none, spacing_below: none, background: ''}
@@ -474,3 +474,31 @@ components:
         layout_properties: {row: BTNFSF, width_xs: 3, col_xs: 9, width: 229, grid_position: 'AVJIEH,LHHCLH',
           full_width_row: false}
         name: image_2
+- type: FileLoader
+  properties:
+    role: null
+    show_state: true
+    align: center
+    tooltip: ''
+    border: ''
+    file_types: null
+    enabled: true
+    files: []
+    foreground: ''
+    visible: true
+    text: Upload
+    font_size: null
+    font: ''
+    spacing_above: small
+    icon_align: left
+    spacing_below: small
+    italic: false
+    file: null
+    background: ''
+    bold: false
+    underline: false
+    multiple: false
+    icon: fa:upload
+  name: file_loader_1
+  layout_properties: {row: UCABRM, width_xs: 12, col_xs: 0, width: 1013.98}
+  event_bindings: {change: file_loader_1_change}
