--- a/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
@@ -100,3 +100,9 @@ components:
     layout_properties: {grid_position: 'PHZSYP,SHTQCO'}
     data_bindings: []
   event_bindings: {click: update_item2}
+- type: ColumnPanel
+  properties: {role: tonal-card, tooltip: '', border: '', foreground: '', visible: true,
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '', spacing_below: small,
+    background: ''}
+  name: outlined_card_1
+  layout_properties: {column: null}
