--- a/client_code/Mainpage/Modal_wide/form_template.yaml
+++ b/client_code/Mainpage/Modal_wide/form_template.yaml
@@ -191,7 +191,7 @@ components:
     name: label_1
     layout_properties: {grid_position: 'KTJXJG,YWNEHA'}
   - type: ColumnPanel
-    properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: true,
+    properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
       wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"RDQOEF":55,"SSSIQM":25}',
       spacing_below: small, background: ''}
     name: column_panel_2
