Edited Modal_wide; Deleted Mainpage, Mainpage.Mainpage, Mainpage.Mainpage.ItemTemplate1, Mainpage.Mainpage.RowTemplate1 and 6 more

--- a/client_code/Modal_wide/form_template.yaml
+++ b/client_code/Modal_wide/form_template.yaml
@@ -320,7 +320,7 @@ components:
       components:
       - type: RepeatingPanel
         properties: {role: null, tooltip: '', border: '', foreground: '', items: null,
-          visible: true, spacing_above: none, spacing_below: none, item_template: Mainpage.Modal_wide.RowTemplate2,
+          visible: true, spacing_above: none, spacing_below: none, item_template: Modal_wide.RowTemplate2,
           background: ''}
         name: action_panelwide
         layout_properties: {}
