--- a/client_code/Modal_wide/form_template.yaml
+++ b/client_code/Modal_wide/form_template.yaml
@@ -2,7 +2,7 @@ container: {type: ColumnPanel}
 components:
 - type: ColumnPanel
   properties: {role: border-bottom, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"QFIVOG":25}',
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"QFIVOG":25,"YWNEHA":40,"BCTDMD":10,"OZMXOW":10}',
     spacing_below: small, background: ''}
   name: column_panel_1
   layout_properties:
@@ -190,6 +190,21 @@ components:
       underline: false, icon: ''}
     name: label_1
     layout_properties: {grid_position: 'KTJXJG,YWNEHA'}
+  - type: Button
+    properties: {role: null, align: right, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: 'fa:chevron-left'}
+    name: button_2
+    layout_properties: {grid_position: 'KTJXJG,BCTDMD'}
+  - type: Button
+    properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: 'fa:chevron-right'}
+    name: button_1
+    layout_properties: {grid_position: 'KTJXJG,OZMXOW'}
+    event_bindings: {click: next_click}
   - type: ColumnPanel
     properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
       wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"RDQOEF":55,"SSSIQM":25}',
