--- a/anvil.yaml
+++ b/anvil.yaml
@@ -36,13 +36,7 @@ db_schema:
   test_table:
     client: none
     server: full
-    columns:
-    - name: id
-      admin_ui: {order: 0, width: 200}
-      type: string
-    - name: name
-      admin_ui: {order: 1, width: 200}
-      type: string
+    columns: []
     title: test table
   escalation_type:
     title: escalation_type
