--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -8,7 +8,7 @@ components:
     wrap_on: mobile, col_spacing: medium, spacing_above: none, col_widths: '', spacing_below: none,
     background: ''}
   name: filterpanel
-  layout_properties: {slot: filterpanel}
+  layout_properties: {slot: filter_panel}
   components:
   - type: GridPanel
     properties: {spacing_above: small, spacing_below: none, background: '', foreground: '',
@@ -400,6 +400,14 @@ components:
         underline: false, icon: ''}
       layout_properties: {row: YQKNAU, width_xs: 2, col_xs: 7, width: 60.4375}
       name: label_3_copy
+    - type: Button
+      properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
+        foreground: '', visible: true, text: new, font_size: null, font: '', spacing_above: none,
+        icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: button_2
+      layout_properties: {row: YQKNAU, width_xs: 1, col_xs: 11, width: 49.5781}
+      event_bindings: {click: new_escalation}
     - type: Button
       properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
         foreground: '', visible: false, text: Search, font_size: 12, font: '', spacing_above: small,
