--- a/client_code/New/form_template.yaml
+++ b/client_code/New/form_template.yaml
@@ -28,7 +28,7 @@ components:
         background: '', bold: false, underline: false}
       name: job_input
       layout_properties: {grid_position: 'QHRNJM,DSNXWM', row: UZVXNL, width_xs: 3,
-        col_xs: 1, width: 26.2031}
+        col_xs: 3, width: 26.2031}
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
         visible: true, text: 'Customer name :', font_size: null, font: '', spacing_above: none,
@@ -42,7 +42,7 @@ components:
         font: '', spacing_above: none, type: text, spacing_below: none, italic: false,
         background: '', bold: false, underline: false}
       name: customer_input
-      layout_properties: {row: TEJPOI, width_xs: 3, col_xs: 4, width: 26.2031}
+      layout_properties: {row: TEJPOI, width_xs: 3, col_xs: 3, width: 26.2031}
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
         visible: true, text: 'Customer Mobile :', font_size: null, font: '', spacing_above: none,
@@ -56,7 +56,7 @@ components:
         font: '', spacing_above: none, type: text, spacing_below: none, italic: false,
         background: '', bold: false, underline: false}
       name: mobile_input
-      layout_properties: {row: KWYRGS, width_xs: 3, col_xs: 4, width: 26.2031}
+      layout_properties: {row: KWYRGS, width_xs: 3, col_xs: 3, width: 26.2031}
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
         visible: true, text: 'Escalation Type :', font_size: null, font: '', spacing_above: none,
@@ -83,11 +83,10 @@ components:
         background: ''
         bold: false
         underline: false
-        include_placeholder: true
+        include_placeholder: false
       name: dd_esc_type
-      layout_properties: {row: IMXBDW, width_xs: 3, col_xs: 4, width: 60.2031}
-      data_bindings:
-      - {property: items, code: 'self.item[''esc_type'']'}
+      layout_properties: {row: IMXBDW, width_xs: 3, col_xs: 3, width: 60.2031}
+      data_bindings: []
     - type: Label
       properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
         visible: true, text: 'Escalation Status :', font_size: null, font: '', spacing_above: none,
@@ -114,9 +113,8 @@ components:
         background: ''
         bold: false
         underline: false
-        include_placeholder: true
+        include_placeholder: false
       name: dd_esc_status
-      layout_properties: {row: RQWNGD, width_xs: 3, col_xs: 4, width: 60.2031}
-      data_bindings:
-      - {property: items, code: 'self.item[''esc_status'']'}
+      layout_properties: {row: RQWNGD, width_xs: 3, col_xs: 3, width: 60.2031}
+      data_bindings: []
 is_package: true
